--- a/02-HTML-Fundamentals/index.html
+++ b/02-HTML-Fundamentals/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
+    <meta charset="UTF-8" />
     <title>Teh Basic Language of the Web: HTML</title>
   </head>
 
@@ -16,10 +17,23 @@
 
     <!-- h1は通常各pageに1つがbetter。 -->
     <h1>📘 The Code Magazine</h1>
-    <!-- 太字には、bではなく、strongがbetter。bはsemantic meaningなしの古いtag、strongはsemanticありの新しいtag。 -->
-    <p>Posted by <strong>Laura Jones</strong> on Monday, June 21st 2027</p>
 
     <h2>The Basic Language of the Web: HTML</h2>
+    <img
+      src="laura-jones.jpg"
+      alt="Headshot of Laura Jones"
+      width="50"
+      height="50"
+    />
+    <!-- 太字には、bではなく、strongがbetter。bはsemantic meaningなしの古いtag、strongはsemanticありの新しいtag。 -->
+    <p>Posted by <strong>Laura Jones</strong> on Monday, June 21st 2027</p>
+    <!-- altは画像が見つからなかったときにも表示される -->
+    <img
+      src="post-img.jpg"
+      alt="HTML code on a screen"
+      width="500"
+      height="200"
+    />
     <p>
       <!-- イタリックにはem(emphasis)がbetter。iはsemanticなしの古いtag、emはsemanticありの新しいtag。 -->
       All modern websites and web applications are built using three
