--- a/02-HTML-Fundamentals/index.html
+++ b/02-HTML-Fundamentals/index.html
@@ -17,6 +17,11 @@
 
     <!-- h1は通常各pageに1つがbetter。 -->
     <h1>📘 The Code Magazine</h1>
+    <a href="blog.html">Blog</a>
+    <!-- #の後のurlフラグメントで、現document内のidで指定したanchor pointへjumpできる。#だけだとpage top -->
+    <a href="#">Challenge</a>
+    <a href="#">Flexbox</a>
+    <a href="#">CSS Grid</a>
 
     <h2>The Basic Language of the Web: HTML</h2>
     <img
@@ -64,6 +69,15 @@
       <li>The closing tag</li>
       <li>The actual element</li>
     </ol>
+    <p>
+      You can learn more at
+      <!-- targetのdefaultは同じtabで開く、_blankで新規tab -->
+      <a
+        href="https://developer.mozilla.org/en-US/docs/Web/HTML"
+        target="_blank"
+        >MDN Web Docs</a
+      >.
+    </p>
 
     <h3>Why should you learn HTML?</h3>
     <p>
