--- a/02-HTML-Fundamentals/index.html
+++ b/02-HTML-Fundamentals/index.html
@@ -32,7 +32,7 @@
       <header>
         <h2>The Basic Language of the Web: HTML</h2>
         <img
-          src="laura-jones.jpg"
+          src="img/laura-jones.jpg"
           alt="Headshot of Laura Jones"
           width="50"
           height="50"
@@ -41,7 +41,7 @@
         <p>Posted by <strong>Laura Jones</strong> on Monday, June 21st 2027</p>
         <!-- altは画像が見つからなかったときにも表示される -->
         <img
-          src="post-img.jpg"
+          src="img/post-img.jpg"
           alt="HTML code on a screen"
           width="500"
           height="200"
@@ -104,6 +104,38 @@
       </ul>
       <p>Hopefully you learned something new here. See you next time!</p>
     </article>
+
+    <!-- asideで補足的な内容 -->
+    <aside>
+      <h4>Related posts</h4>
+      <ul>
+        <li>
+          <img
+            src="img/related-1.jpg"
+            alt="Person programming"
+            width="75"
+            height="75"
+          />
+          <a href="#">How to Learn Web Development</a>
+          <p>By Jonas Schmedtmann</p>
+        </li>
+        <li>
+          <img src="img/related-2.jpg" alt="Lightning" width="75" height="75" />
+          <a href="#">The Unknown Powers of CSS</a>
+          <p>By Jim Dillon</p>
+        </li>
+        <li>
+          <img
+            src="img/related-3.jpg"
+            alt="Why JavaScript is Awesome"
+            width="75"
+            height="75"
+          />
+          <a href="#">Why JavaScript is Awesome</a>
+          <p>By Matilda</p>
+        </li>
+      </ul>
+    </aside>
 
     <footer>
       <!-- html entity &EntityName; -->
