--- a/03-CSS-Fundamentals/index.html
+++ b/03-CSS-Fundamentals/index.html
@@ -27,6 +27,7 @@
         <a href="#">Flexbox</a>
         <a href="#">CSS Grid</a>
       </nav>
+      <p>Test paragraph</p>
     </header>
 
     <article>
@@ -139,8 +140,10 @@
     </aside>
 
     <footer>
-      <!-- html entity &EntityName; -->
-      Copyright &copy; 2027 by The Code Magazine.
+      <p>
+        <!-- html entity &EntityName; -->
+        Copyright &copy; 2027 by The Code Magazine.
+      </p>
     </footer>
   </body>
 </html>
