id, class selector 26

--- a/03-CSS-Fundamentals/index.html
+++ b/03-CSS-Fundamentals/index.html
@@ -40,7 +40,9 @@
           height="50"
         />
         <!-- 太字には、bではなく、strongがbetter。bはsemantic meaningなしの古いtag、strongはsemanticありの新しいtag。 -->
-        <p>Posted by <strong>Laura Jones</strong> on Monday, June 21st 2027</p>
+        <p id="author">
+          Posted by <strong>Laura Jones</strong> on Monday, June 21st 2027
+        </p>
         <!-- altは画像が見つからなかったときにも表示される -->
         <img
           src="img/post-img.jpg"
@@ -110,7 +112,7 @@
     <!-- asideで補足的な内容 -->
     <aside>
       <h4>Related posts</h4>
-      <ul>
+      <ul class="related">
         <li>
           <img
             src="img/related-1.jpg"
@@ -119,12 +121,12 @@
             height="75"
           />
           <a href="#">How to Learn Web Development</a>
-          <p>By Jonas Schmedtmann</p>
+          <p class="related-author">By Jonas Schmedtmann</p>
         </li>
         <li>
           <img src="img/related-2.jpg" alt="Lightning" width="75" height="75" />
           <a href="#">The Unknown Powers of CSS</a>
-          <p>By Jim Dillon</p>
+          <p class="related-author">By Jim Dillon</p>
         </li>
         <li>
           <img
@@ -134,13 +136,13 @@
             height="75"
           />
           <a href="#">Why JavaScript is Awesome</a>
-          <p>By Matilda</p>
+          <p class="related-author">By Matilda</p>
         </li>
       </ul>
     </aside>
 
     <footer>
-      <p>
+      <p id="copyright">
         <!-- html entity &EntityName; -->
         Copyright &copy; 2027 by The Code Magazine.
       </p>
