--- a/03-CSS-Fundamentals/index.html
+++ b/03-CSS-Fundamentals/index.html
@@ -17,7 +17,7 @@
     -->
 
     <!-- 導入的なcontentをまとめる、複数設置しておｋ。headerの小要素にheader, footerは含めない。 -->
-    <header>
+    <header class="main-header">
       <!-- h1は通常各pageに1つがbetter。 -->
       <h1>📘 The Code Magazine</h1>
       <nav>
@@ -27,7 +27,6 @@
         <a href="#">Flexbox</a>
         <a href="#">CSS Grid</a>
       </nav>
-      <p>Test paragraph</p>
     </header>
 
     <article>
