pseudo class 疑似クラス 28

--- a/03-CSS-Fundamentals/index.html
+++ b/03-CSS-Fundamentals/index.html
@@ -30,6 +30,8 @@
     </header>
 
     <article>
+      <!-- article p:first-childで下記の要素がselecされる  -->
+      <!-- <p>Test</p> -->
       <header>
         <h2>The Basic Language of the Web: HTML</h2>
         <img
@@ -39,6 +41,7 @@
           height="50"
         />
         <!-- 太字には、bではなく、strongがbetter。bはsemantic meaningなしの古いtag、strongはsemanticありの新しいtag。 -->
+        <!-- article内で最初に登場するpだが、親がheaderなのでarticle p:first-childではselectされない -->
         <p id="author">
           Posted by <strong>Laura Jones</strong> on Monday, June 21st 2027
         </p>
@@ -50,6 +53,7 @@
           height="200"
         />
       </header>
+      <!-- article p:first-childではselectされない。親のarticleからみてこのpは2つめなのでarticle p:nth-child(2)でselectされる。 -->
       <p>
         <!-- イタリックにはem(emphasis)がbetter。iはsemanticなしの古いtag、emはsemanticありの新しいtag。 -->
         All modern websites and web applications are built using three
@@ -76,7 +80,7 @@
       </p>
       <p>In HTML, each element is made up of 3 parts:</p>
       <ol>
-        <li>The opening tag</li>
+        <li class="first-li">The opening tag</li>
         <li>The closing tag</li>
         <li>The actual element</li>
       </ol>
@@ -96,7 +100,9 @@
         web. Here are 5 of them:
       </p>
       <ul>
-        <li>To be able to use the fundamental web dev language</li>
+        <li class="first-li">
+          To be able to use the fundamental web dev language
+        </li>
         <li>
           To hand-craft beautiful websites instead of relying on tools like
           Worpress or Wix
