--- a/03-CSS-Fundamentals/index.html
+++ b/03-CSS-Fundamentals/index.html
@@ -147,7 +147,7 @@
     </aside>
 
     <footer>
-      <p id="copyright">
+      <p id="copyright" class="copyright text">
         <!-- html entity &EntityName; -->
         Copyright &copy; 2027 by The Code Magazine.
       </p>
