--- a/03-CSS-Fundamentals/index.html
+++ b/03-CSS-Fundamentals/index.html
@@ -21,6 +21,7 @@
       <!-- h1は通常各pageに1つがbetter。 -->
       <h1>📘 The Code Magazine</h1>
       <nav>
+        <!-- <strong>This is the navigation</strong> -->
         <a href="blog.html">Blog</a>
         <!-- #の後のurlフラグメントで、現document内のidで指定したanchor pointへjumpできる。#だけだとpage top -->
         <a href="#">Challenge</a>
