--- a/03-CSS-Fundamentals/challenge.html
+++ b/03-CSS-Fundamentals/challenge.html
@@ -2,31 +2,35 @@
 <html>
   <head>
     <title>Challenge #2</title>
+    <link rel="stylesheet" href="challenge.css" />
   </head>
   <body>
-    <article>
+    <article class="product">
       <!-- このshopping用の表示全体がcomponentと考えると、各page1つのh1よりh2にした方が1つのpageに複数componentを配置できる -->
-      <h2>Converse Chuck Taylor All Star Low Top</h2>
+      <h2 class="product-title">Converse Chuck Taylor All Star Low Top</h2>
       <img
         src="https://i.ibb.co/Jr7Wh1d/challenges.jpg"
         alt="Converse Chuck Taylor All Star Low Top"
         width="250"
         height="250"
       />
-      <p><strong>$65.00</strong></p>
-      <p>Free shipping</p>
+      <p class="price"><strong>$65.00</strong></p>
+      <p class="shipping">Free shipping</p>
       <p>
+      <p class="product-description">
         Ready to dress up or down, these classic canvas Chucks are an everyday
         wardrobe staple.
       </p>
-      <a href="https://www.converse.com">More information &rarr;</a>
-      <h3>Product details</h3>
-      <ul>
+      <a class="more-info" href="https://www.converse.com"
+        >More information &rarr;</a
+      >
+      <h3 class="details-title">Product details</h3>
+      <ul class="details-list">
         <li>Lightweight, durable canvas sneaker</li>
         <li>Lightly padded footbed for added comfort</li>
         <li>Iconic Chuck Taylor ankle patch</li>
       </ul>
-      <button>Add to cart</button>
+      <button class="add-cart">Add to cart</button>
     </article>
   </body>
 </html>
