--- a/03-CSS-Fundamentals/challenge.html
+++ b/03-CSS-Fundamentals/challenge.html
@@ -16,7 +16,7 @@
       />
       <p class="price"><strong>$65.00</strong></p>
       <p class="shipping">Free shipping</p>
-      <p>
+      <p class="sale">Sale</p>
       <p class="product-description">
         Ready to dress up or down, these classic canvas Chucks are an everyday
         wardrobe staple.
@@ -24,6 +24,14 @@
       <a class="more-info" href="https://www.converse.com"
         >More information &rarr;</a
       >
+      <div class="colors">
+        <div class="color"></div>
+        <div class="color color-blue"></div>
+        <div class="color color-red"></div>
+        <div class="color color-yellow"></div>
+        <div class="color color-green"></div>
+        <div class="color color-brown"></div>
+      </div>
       <h3 class="details-title">Product details</h3>
       <ul class="details-list">
         <li>Lightweight, durable canvas sneaker</li>
