--- a/04-CSS-Layouts/index.html
+++ b/04-CSS-Layouts/index.html
@@ -41,10 +41,11 @@
             alt="Headshot of Laura Jones"
             width="50"
             height="50"
+            class="author-img"
           />
           <!-- 太字には、bではなく、strongがbetter。bはsemantic meaningなしの古いtag、strongはsemanticありの新しいtag。 -->
           <!-- article内で最初に登場するpだが、親がheaderなのでarticle p:first-childではselectされない -->
-          <p id="author">
+          <p id="author" class="author">
             Posted by <strong>Laura Jones</strong> on Monday, June 21st 2027
           </p>
           <!-- altは画像が見つからなかったときにも表示される -->
