--- a/04-CSS-Layouts/index.html
+++ b/04-CSS-Layouts/index.html
@@ -28,8 +28,8 @@
           <a href="blog.html">Blog</a>
           <!-- #の後のurlフラグメントで、現document内のidで指定したanchor pointへjumpできる。#だけだとpage top -->
           <a href="#">Challenge</a>
-          <a href="#">Flexbox</a>
-          <a href="#">CSS Grid</a>
+          <a href="flexbox.html">Flexbox</a>
+          <a href="css-grid.html">CSS Grid</a>
         </nav>
         <!-- floatする要素の後にclearする要素をついか -->
         <!-- <div class="clear"></div> -->
